# agentos

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
agentos/: README.md
agentos/agentos/: __init__.py  __main__.py  agent.py  manager.py  spec.py  standards.py  task.py  utils.py
tests/: __init__.py  test_agent.py  test_spec.py  test_task.py
